Colaboratory를 통해 생성됨

--- a/Chapter_03_조건문의_이해.ipynb
+++ b/Chapter_03_조건문의_이해.ipynb
@@ -77,13 +77,63 @@
       "metadata": {
         "id": "FVGnu1wOb4sV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "4662a42e-3c2d-4375-d2d1-05550aa8b769"
       },
       "source": [
-        ""
+        "if 6 >= 5:\n",
+        "    print ('6 is greater than 5')\n",
+        "    print ('Yeah, it is true')\n",
+        "    print ('it is really true')\n",
+        "    \n",
+        "print ('This code is not belongs to if statements') # if 블럭과 상관없는 코드 줄"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6 is greater than 5\n",
+            "Yeah, it is true\n",
+            "it is really true\n",
+            "This code is not belongs to if statements\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AmjtWR35N6hm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a24332f3-94f1-4a81-9a56-d071692430c2"
+      },
+      "source": [
+        "if 6 == 5:\n",
+        "    print ('6 is greater than 5')\n",
+        "    print ('Yeah, it is true')\n",
+        "    print ('it is really true')\n",
+        "    \n",
+        "print ('This code is not belongs to if statements') # if 블럭과 상관없는 코드 줄"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "This code is not belongs to if statements\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -125,6 +175,130 @@
         "colab": {}
       },
       "source": [
+        "a=10\n",
+        "b=8\n",
+        "c=11"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bzl9QQ6UOjge",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4944fb3b-edea-45cc-90d6-12ffdd6aa14a"
+      },
+      "source": [
+        "if a==10 and b==9:\n",
+        "  print('that is true')\n",
+        "\n",
+        "if a==10 and b!=9:\n",
+        "  print('that is true')"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "that is true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "thKjWlYwOjV9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "df7bf96f-10f0-4ec9-b7f0-38a4afc17ab4"
+      },
+      "source": [
+        "# 논리연산자 수행 우선순위 : not and or 순으로 수행된다. 만일 먼저 하고 싶으면 괄호를 사용하면 된다. \n",
+        "\n",
+        "if a==10 or b==9 and c==12:\n",
+        "  print('that is true')"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "that is true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MFM3SOC2PnNh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8bbe7caf-2533-4b67-f90d-b977c21b3e4d"
+      },
+      "source": [
+        "if not a==19:\n",
+        "  print('that is true')"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "that is true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "anThu8EuPnD1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "12c15c99-8d8d-4888-e415-9dea10ec798a"
+      },
+      "source": [
+        "if a!=19:\n",
+        "  print('that is true')"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "that is true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7xvQ9JAUOiDH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": 0,
@@ -155,12 +329,92 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ah7jZCenQbpQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2bfba852-d776-4add-c0d0-5789f782433e"
+      },
+      "source": [
+        "if not a==19:\n",
+        "  print('that is true')"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "print\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "MD-KwP1Ob4sg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "40f0feb4-d4f0-4579-de7a-5fcd744b7b7c"
+      },
+      "source": [
+        "if 3:\n",
+        "  print('print')"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "print\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UzOdOVsCQt2s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "26372a7d-7b4e-4fea-d7a9-6e67200300a2"
+      },
+      "source": [
+        "if 'a':\n",
+        "  print('print')"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "print\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MyjSQZt-QtqU",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "a=[]\n",
+        "if a:\n",
+        "  print('print')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -183,13 +437,31 @@
       "metadata": {
         "id": "HGYV_Gusb4sl",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ce3b4f4d-7974-4c58-9213-bdf406a0b67c"
       },
       "source": [
-        ""
+        "# 짝수인 경우 어떤 처리를 하고 홀수인 경우는 다른 처리를 해라\n",
+        "\n",
+        "a=11\n",
+        "if a % 2==0: #짝수인지 판별\n",
+        "  print(a/2)\n",
+        "else:        #if와 else사이에는 어떤 다른 코드도 들어가지 못한다. \n",
+        "  print(a+1)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -221,13 +493,71 @@
       "metadata": {
         "id": "UwYTd7dqb4sq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "989b1070-7708-4107-8458-03fe5d219c2f"
       },
       "source": [
-        ""
+        "a = 16\n",
+        "if a % 4 == 0:\n",
+        "    print('a is divisible by 4')\n",
+        "elif a % 4 == 1:\n",
+        "    print ('a % 4 is 1')\n",
+        "elif a % 4 == 2:\n",
+        "    print ('a % 4 is 2')\n",
+        "else:\n",
+        "    print ('a % 4 is 3')\n",
+        "    \n",
+        "# if~elif~else 조건문은 if~elif중에서 하나만 실행되어도 바로 else로 넘어간다."
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a is divisible by 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iD7O7E70Tq4e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "39d0d56e-fc80-427b-b8f3-0d43d9026622"
+      },
+      "source": [
+        "a = 16\n",
+        "if a % 4 == 0:\n",
+        "    print('a is divisible by 4')\n",
+        "if a % 4 == 1:\n",
+        "    print ('a % 4 is 1')\n",
+        "if a % 4 == 2:\n",
+        "    print ('a % 4 is 2')\n",
+        "else:\n",
+        "    print ('a % 4 is 3')\n",
+        "    \n",
+        "# if~if~else 는 각각단계 모두 실행된다. "
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a is divisible by 4\n",
+            "a % 4 is 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -246,13 +576,36 @@
       "metadata": {
         "id": "k5Nzs8mKb4su",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "cd2f861c-7fbb-4b96-b3d4-42127ece3c56"
       },
       "source": [
-        ""
+        "a=10\n",
+        "b=9\n",
+        "c=8\n",
+        "\n",
+        "if a==9:\n",
+        "  if c==8:\n",
+        "    if b==8:\n",
+        "      print('a is ten and b is 8')\n",
+        "    else:\n",
+        "      print('a is ten and b is not 8')\n",
+        "else:\n",
+        "  print('a is ten')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a is ten\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
