Colaboratory를 통해 생성됨

--- a/Chapter_03_반복문의_이해(while).ipynb
+++ b/Chapter_03_반복문의_이해(while).ipynb
@@ -93,13 +93,44 @@
       "metadata": {
         "id": "Eudi6QlBbYXV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "4fb2a0e0-89ee-4bcc-aa73-cfff37b13fff"
       },
       "source": [
-        ""
+        "a=[1,9,24,17,566,23,45,67,89]\n",
+        "\n",
+        "print(len(a))\n",
+        "\n",
+        "i=0\n",
+        "while i<len(a):\n",
+        "    print('value:',a[i], 'index:',i)\n",
+        "    i+=1\n",
+        "    \n",
+        "print('hahaha')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "value: 1 index: 0\n",
+            "value: 9 index: 1\n",
+            "value: 24 index: 2\n",
+            "value: 17 index: 3\n",
+            "value: 566 index: 4\n",
+            "value: 23 index: 5\n",
+            "value: 45 index: 6\n",
+            "value: 67 index: 7\n",
+            "value: 89 index: 8\n",
+            "hahaha\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,13 +148,71 @@
       "metadata": {
         "id": "7CC6h-S1bYXc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "7d4033ce-92f3-4b14-ecb4-83fa3d78241d"
       },
       "source": [
-        ""
+        "a=[1,10,9,24,25,26]\n",
+        "\n",
+        "i=0\n",
+        "while i<len(a):\n",
+        "  if a[i]>20:\n",
+        "    print(a[i])\n",
+        "  i+=1"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "24\n",
+            "25\n",
+            "26\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j2AI5Bf0Zkq7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        },
+        "outputId": "88775168-e7dc-4a9c-d8b3-2bcc656ac958"
+      },
+      "source": [
+        "a=[1,10,9,24,25,26]\n",
+        "\n",
+        "i=0\n",
+        "while i<len(a):\n",
+        "  if a[i]%2==1:  # 홀수인 경우\n",
+        "    print(a[i])\n",
+        "  else:\n",
+        "    print(a[i]/2) # 짝수는 2로 나누어 몫 출력\n",
+        "  i+=1"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "5.0\n",
+            "9\n",
+            "12.0\n",
+            "25\n",
+            "13.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -167,13 +256,38 @@
       "metadata": {
         "id": "zHk3s57ObYXn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "a0278759-9d8a-4c2f-98fc-0eedf660234c"
       },
       "source": [
-        ""
+        "a=[1,10,9,24,25,26]\n",
+        "i=0\n",
+        "while i<len(a):\n",
+        "  if a[i]>20:\n",
+        "    break\n",
+        "    \n",
+        "  print(a[i])\n",
+        "  \n",
+        "  i+=1\n",
+        "  \n",
+        "print('haha')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "10\n",
+            "9\n",
+            "haha\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -190,7 +304,162 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "YxZbwItDcZJ1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4019c03e-0d95-496d-dc41-356a9471b80f"
+      },
+      "source": [
+        "a=7\n",
+        "while a>0:\n",
+        "    a-=1\n",
+        "    if a==5:\n",
+        "        break  # 특정조건일 때 끝내고자 할 때\n",
+        "    print(a)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "hSd_IL0cbYXr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        },
+        "outputId": "b6d2228a-db03-4fc3-e183-149b4b07dc39"
+      },
+      "source": [
+        "a=7\n",
+        "while a>0:\n",
+        "    a-=1\n",
+        "    if a==5:\n",
+        "        continue  # 해당조건이 만족되면 출력하지 않고 그대로 반복시행, 즉 특정조건일때 실행하지 않고 넘어가고자 할 때\n",
+        "    print(a)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L4FvabnsdiXF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c1f99ae2-c190-45f5-ce10-c5c61d7b4410"
+      },
+      "source": [
+        "# 1부터 100까지 더하기\n",
+        "\n",
+        "i=0\n",
+        "_sum=0\n",
+        "while i<=100:\n",
+        "    _sum=_sum+i\n",
+        "    i=i+1\n",
+        "print(_sum)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5050\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c_lV7ACldiOE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "03439f96-7857-4b10-cb38-81a14c64531c"
+      },
+      "source": [
+        "i=0\n",
+        "_sum=0\n",
+        "while True:\n",
+        "    _sum=_sum+i\n",
+        "    i=i+1\n",
+        "    if i>100:\n",
+        "        break\n",
+        "print(_sum)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5050\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOi-trufdiDy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7NyV7Kvfdgfd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jxAkK0cKdhOk",
         "colab_type": "code",
         "colab": {}
       },
