Colaboratory를 통해 생성됨

--- a/Chapter_04_함수의_이해_.ipynb
+++ b/Chapter_04_함수의_이해_.ipynb
@@ -77,13 +77,32 @@
       "metadata": {
         "id": "NbdY63escQaX",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "ac09a7cb-e9fe-4547-a6a3-247d69dbc1e4"
       },
       "source": [
-        "# 내장 함수의 예"
+        "# 내장 함수의 예\n",
+        "a=[1,2,3,4]\n",
+        "length=len(a)\n",
+        "print(length)\n",
+        "\n",
+        "summation=sum(a)\n",
+        "print(summation)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -109,13 +128,30 @@
       "metadata": {
         "id": "EqnacFbRcQad",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "33a8ac09-e865-4b30-919c-ab1d80beb920"
       },
       "source": [
-        ""
+        "def add(x,y):\n",
+        "    z=x+y\n",
+        "    return(z)\n",
+        "\n",
+        "c=add(45,21)\n",
+        "print(c)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "66\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -192,13 +228,62 @@
       "metadata": {
         "id": "2AqAi3OncQar",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "c9157bf2-c97d-4036-b137-d93f747d172d"
       },
       "source": [
-        ""
+        "def test(x,y):  # x, y 는 변수이므로 함수안에서 얼마든지 출력과 프로그램밍이 가능하다.\n",
+        "    print(x,y)\n",
+        "    z=x+y\n",
+        "    return(z)\n",
+        "\n",
+        "a=test(10,40)\n",
+        "print(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 40\n",
+            "50\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rninzfRaggdW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0abfe07d-66a9-4a03-c8b5-5e986f05855c"
+      },
+      "source": [
+        "def text_add(x,y):\n",
+        "    z=x+y\n",
+        "    return(z)\n",
+        "  \n",
+        "a=text_add('이','창문')\n",
+        "print(a)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "이창문\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
